--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,20 @@ server.port=9090
 spring.jackson.date-format=org.openapitools.RFC3339DateFormat
 spring.jackson.serialization.WRITE_DATES_AS_TIMESTAMPS=false
 springdoc.swagger-ui.url=/PersonAPI.yml
+
+spring.datasource.url = jdbc:h2:file:E:/databases/person
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+
+# temporary data storage
+# spring.datasource.url = jdbc:h2:tcp://localhost/~/test
+# spring.datasource.driverClassName=org.h2.Driver
+# spring.datasource.username=sa
+# spring.datasource.password=
+# spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+
+# temporary data storage in files
+# spring.datasource.url = jdbc:h2:file:/data/sample
+# spring.datasource.url = jdbc:h2:file:C:/data/sample
